[tool.poetry]
name = "vzz-conversion"
version = "0.1.0"
description = ""
authors = ["dasalam <dasalam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
